k8s/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: core-api-disable-cache
  namespace: core-api
spec:
  headers:
    customResponseHeaders:
      Cache-Control: "no-store, no-cache, must-revalidate, max-age=0"
      Pragma: "no-cache"
      Expires: "0"
