k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  namespace: core-api
spec:
  selector:
    app: core-api
  ports:
    - name: http
      port: 80
      targetPort: http
